# ZPR-agario

./: .gitignore  CMakeLists.txt
include/: Ball.h  Ball.hpp  Board.h  Board.hpp  Bot.hpp  Game.h  Game.hpp  Player.h  Player.hpp
scripts/: run.sh  test.sh
src/: Ball.cpp  Board.cpp  Bot.cpp  Game.cpp  Player.cpp  QuadTree.hpp  main.cpp
tests/: CMakeLists.txt  mytests.cpp  test  test.sh  test_main.cpp  test_main2.cpp
